@@ -1,8 +1,8 @@
 dynlink.cmo: ../../utils/config.cmi ../../bytecomp/emitcode.cmi \
-    ../../bytecomp/meta.cmi ../../utils/misc.cmi ../../bytecomp/opcodes.cmo \
-    ../../bytecomp/symtable.cmi dynlink.cmi 
+    ../../typing/ident.cmi ../../bytecomp/meta.cmi ../../utils/misc.cmi \
+    ../../bytecomp/opcodes.cmo ../../bytecomp/symtable.cmi dynlink.cmi 
 dynlink.cmx: ../../utils/config.cmx ../../bytecomp/emitcode.cmx \
-    ../../bytecomp/meta.cmx ../../utils/misc.cmx ../../bytecomp/opcodes.cmx \
-    ../../bytecomp/symtable.cmx dynlink.cmi 
+    ../../typing/ident.cmx ../../bytecomp/meta.cmx ../../utils/misc.cmx \
+    ../../bytecomp/opcodes.cmx ../../bytecomp/symtable.cmx dynlink.cmi 
 extract_crc.cmo: dynlink.cmi 
 extract_crc.cmx: dynlink.cmx 
