@@ -72,8 +72,10 @@ and ident_end_of_file = Ident.create "End_of_file"
 and ident_division_by_zero = Ident.create "Division_by_zero"
 and ident_stack_overflow = Ident.create "Stack_overflow"
 and ident_sys_blocked_io = Ident.create "Sys_blocked_io"
+and ident_assert_failure = Ident.create "Assert_failure"
 
 let path_match_failure = Pident ident_match_failure
+and path_assert_failure = Pident ident_assert_failure
 
 let build_initial_env add_type add_exception empty_env =
   let decl_abstr =
@@ -140,6 +142,8 @@ let build_initial_env add_type add_exception empty_env =
   add_exception ident_sys_error [type_string] (
   add_exception ident_end_of_file [] (
   add_exception ident_division_by_zero [] (
+  add_exception ident_assert_failure
+                         [newgenty (Ttuple[type_string; type_int; type_int])] (
   add_type ident_int64 decl_abstr (
   add_type ident_int32 decl_abstr (
   add_type ident_nativeint decl_abstr (
@@ -154,11 +158,12 @@ let build_initial_env add_type add_exception empty_env =
   add_type ident_string decl_abstr (
   add_type ident_char decl_abstr (
   add_type ident_int decl_abstr (
-    empty_env))))))))))))))))))))))))
+    empty_env)))))))))))))))))))))))))
 
 let builtin_values =
   List.map (fun id -> Ident.make_global id; (Ident.name id, id))
       [ident_match_failure; ident_out_of_memory; ident_stack_overflow;
        ident_invalid_argument;
        ident_failure; ident_not_found; ident_sys_error; ident_end_of_file;
-       ident_division_by_zero; ident_sys_blocked_io]
+       ident_division_by_zero; ident_sys_blocked_io;
+       ident_assert_failure ]
