@@ -46,6 +46,7 @@ val path_int32: Path.t
 val path_int64: Path.t
 
 val path_match_failure: Path.t
+val path_assert_failure : Path.t
 
 (* To build the initial environment. Since there is a nasty mutual
    recursion between predef and env, we break it by parameterizing
