@@ -12,7 +12,7 @@
 
 (* $Id$ *)
 
-let version = "3.00+19 (2000-11-20)"
+let version = "3.00+20 (2000-12-03)"
 
 let standard_library =
   try
